missing: Add missing swagger types
